...
    case manga
}

class TAAnimeViewController: UIViewController {
    @IBOutlet private weak var vAnime: UIStackView!
    @IBOutlet private weak var vManga: UIStackView!
    @IBOutlet private weak var cvAnime: UICollectionView!
    @IBOutlet private weak var cvManga: UICollectionView!
    
    @IBOutlet private weak var txfAnimeType: SDropdownTextField!
    @IBOutlet private weak var txfAnimeFilter: SDropdownTextField!
    @IBOutlet private weak var txfMangaType: SDropdownTextField!
    @IBOutlet private weak var txfMangaFilter: SDropdownTextField!
    
...
