...

import UIKit
import SafariServices
import DZNEmptyDataSet

class TAMyViewController: UIViewController {
    @IBOutlet private weak var cvFavorite: UICollectionView!
    @IBOutlet private weak var lbTotal: UILabel!
    
    let kCellIdentifier = "TAMyCollectionViewCell"
    
    private var aryFavorite: [Favorite] = [] {
        didSet {
...
